Page scaffolding; navigation and navigation items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
 <body class="h-screen bg-slate-50">
 <main class="container mx-auto px-5 h-full">
+  <%= render 'layouts/navigation' %>
   <%= render 'layouts/alerts' %>
   <%= yield %>
 </main>
