Goals list view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <%= javascript_importmap_tags %>
 </head>
 
-<body class="h-screen bg-slate-50">
-<main class="container mx-auto px-5 h-full">
+<body class="h-screen bg-white">
+<main class="w-full max-w-xl mx-auto px-5 h-full">
   <% if current_user %>
     <%= render 'layouts/navigation' %>
   <% end %>
