--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,3 +1,7 @@
-<%@goals.each do |goal| %>
-   <p><%= goal.name %></p>
-<% end %>
+<%= render 'layouts/page_header', header: t('goals.header') %>
+
+<div class="space-y-4">
+  <% @goals.each do |goal| %>
+    <%= render 'layouts/goals/list_item', goal: goal %>
+  <% end %>
+</div>
