--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,1 +1,22 @@
 <%= render 'layouts/page_header', header: t('goal.header') %>
+
+
+
+<%= form_with model: @goal, url: goal_path(@goal.id) do |f| %>
+
+  <div class="flex flex-col pb-4">
+    <%= f.label :name, t('goal.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="flex flex-col pb-4">
+    <%= f.label :name, t('goal.schedule_label'), class: "text-2xl font-medium pb-4 select-none" %>
+    <div class="flex items-center content-center">
+      <%= f.radio_button :type, Goals::Daily.name, class: "mr-2" %> <%= t('goal.schedule.daily_label') %>
+      <%= f.radio_button :type, Goals::TimesPerWeek.name, class: "mr-2" %> <%= t('goal.schedule.times_per_week_label') %>
+      <%= f.radio_button :type, Goals::DaysOfWeek.name, class: "mr-2" %> <%= t('goal.schedule.days_of_week_label') %>
+    </div>
+  </div>
+<% end %>
+
+<%#= render Goals::ScheduleComponent.new(goal: @goal) %>
