--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,21 +1,85 @@
 <%= render 'layouts/page_header', header: t('goal.header') %>
 
-
-
 <%= form_with model: @goal, url: goal_path(@goal.id) do |f| %>
 
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: "text-2xl p-4 rounded-md border-gray-200" %>
   </div>
 
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.schedule_label'), class: "text-2xl font-medium pb-4 select-none" %>
-    <div class="flex items-center content-center">
-      <%= f.radio_button :type, Goals::Daily.name, class: "mr-2" %> <%= t('goal.schedule.daily_label') %>
-      <%= f.radio_button :type, Goals::TimesPerWeek.name, class: "mr-2" %> <%= t('goal.schedule.times_per_week_label') %>
-      <%= f.radio_button :type, Goals::DaysOfWeek.name, class: "mr-2" %> <%= t('goal.schedule.days_of_week_label') %>
+
+    <div class="flex flex-col	border p-4 rounded-md border-gray-200">
+      <div class="flex justify-start space-x-4">
+        <div class="flex items-center">
+          <%= f.radio_button :type, Goals::Daily.name, class: "mr-2" %>
+          <div class="text-xl"><%= t('goal.schedule.daily_label') %> </div>
+        </div>
+        <div class="flex items-center">
+          <%= f.radio_button :type, Goals::TimesPerWeek.name, class: "mr-2" %>
+          <div class="text-xl"><%= t('goal.schedule.times_per_week_label') %> </div>
+        </div>
+        <div class="flex items-center">
+          <%= f.radio_button :type, Goals::DaysOfWeek.name, class: "mr-2" %>
+          <div class="text-xl"><%= t('goal.schedule.days_of_week_label') %></div>
+        </div>
+      </div>
+
+      <% if @goal.is_daily? %>
+        <div class="text-gray-400 mt-6">
+          <%= t('goal.schedule.daily_summary') %>
+        </div>
+      <% end %>
+
+      <% if @goal.is_times_per_week? %>
+        <%= f.select :times_per_week, options_for_select(1..6, selected: @goal.times_per_week), {}, class: "mt-6 p-2 px-4 rounded-md border-gray-200" %>
+        <div class="text-gray-400 mt-6">
+          <%= t('goal.schedule.times_per_week_summary', times: 1) %>
+        </div>
+      <% end %>
+
+      <% if @goal.is_days_of_week? %>
+        <div class="flex flex-col mt-6">
+          <div class="flex space-x-2">
+            <div class="flex flex-col items-center">
+              <%= f.check_box :monday, { checked: @goal.days_of_week.include?(0) }, class: "mr-2 border-gray-200" %>
+              <div class="text-md"><%= t('days_of_week.monday') %></div>
+            </div>
+            <div class="flex flex-col items-center">
+              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(1) }, class: "mr-2 border-gray-200" %>
+              <div class="text-md"><%= t('days_of_week.tuesday') %></div>
+            </div>
+            <div class="flex flex-col items-center">
+              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(2) }, class: "mr-2 border-gray-200" %>
+              <div class="text-md"><%= t('days_of_week.wednesday') %></div>
+            </div>
+            <div class="flex flex-col items-center">
+              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(3) }, class: "mr-2 border-gray-200" %>
+              <div class="text-md"><%= t('days_of_week.thursday') %></div>
+            </div>
+            <div class="flex flex-col items-center">
+              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(4) }, class: "mr-2 border-gray-200" %>
+              <div class="text-md"><%= t('days_of_week.friday') %></div>
+            </div>
+            <div class="flex flex-col items-center">
+              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(5) }, class: "mr-2 border-gray-200" %>
+              <div class="text-md"><%= t('days_of_week.saturday') %></div>
+            </div>
+            <div class="flex flex-col items-center">
+              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(6) }, class: "mr-2" %>
+              <div class="text-md"><%= t('days_of_week.sunday') %></div>
+            </div>
+          </div>
+          <div class="text-gray-400 mt-6">
+            <%= t('goal.schedule.day_of_week_summary', days: t('days_of_week.monday')) %>
+          </div>
+        </div>
+      <% end %>
+
     </div>
+
+
   </div>
 <% end %>
 
