Updated schedule messages for goal types

--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -35,7 +35,7 @@
       <% if @goal.is_times_per_week? %>
         <%= f.select :times_per_week, options_for_select(1..6, selected: @goal.times_per_week), {}, class: "mt-6 p-2 px-4 rounded-md border-gray-200" %>
         <div class="text-gray-400 mt-6">
-          <%= t('goal.schedule.times_per_week_summary', times: 1) %>
+          <%= times_per_week_schedule_message(@goal.times_per_week) %>
         </div>
       <% end %>
 
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="text-gray-400 mt-6">
-            <%= t('goal.schedule.day_of_week_summary', days: t('days_of_week.monday')) %>
+            <%= days_of_week_schedule_message(@goal.days_of_week) %>
           </div>
         </div>
       <% end %>
