Made changing goal schedule dynamic with Stimulus

--- a/app/views/layouts/goals/_list_item.html.erb
+++ b/app/views/layouts/goals/_list_item.html.erb
@@ -1,6 +1,6 @@
 <div class="flex border rounded-lg p-4 cursor-pointer border-gray-200 hover:border-gray-400">
   <div class="w-full">
-    <%= link_to goal_path(goal) do %>
+    <%= link_to edit_goal_path(goal) do %>
       <p class="text-3xl cursor-pointer select-none w-full">
         <%= goal.name %>
       </p>
