--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/page_header', header: t('goal.header') %>
 
-<%= form_with model: @goal, url: goal_path(@goal.id) do |f| %>
+<%= form_with model: @goal, url: edit_goal_path(@goal.id), scope: :goal do |f| %>
 
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
@@ -10,18 +10,19 @@
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.schedule_label'), class: "text-2xl font-medium pb-4 select-none" %>
 
-    <div class="flex flex-col	border p-4 rounded-md border-gray-200">
+    <div data-controller="goal-schedule" class="flex flex-col	border p-4 rounded-md border-gray-200">
+      <button formmethod="get" formaction="<%= edit_goal_path(@goal.id) %>" hidden data-goal-schedule-target="changeGoalSchedule"></button>
       <div class="flex justify-start space-x-4">
         <div class="flex items-center">
-          <%= f.radio_button :type, Goals::Daily.name, class: "mr-2" %>
+          <%= f.radio_button :type, Goals::Daily.name, class: "mr-2", data: { action: "click->goal-schedule#changeGoalSchedule"} %>
           <div class="text-xl"><%= t('goal.schedule.daily_label') %> </div>
         </div>
         <div class="flex items-center">
-          <%= f.radio_button :type, Goals::TimesPerWeek.name, class: "mr-2" %>
+          <%= f.radio_button :type, Goals::TimesPerWeek.name, class: "mr-2", data: { action: "click->goal-schedule#changeGoalSchedule"} %>
           <div class="text-xl"><%= t('goal.schedule.times_per_week_label') %> </div>
         </div>
         <div class="flex items-center">
-          <%= f.radio_button :type, Goals::DaysOfWeek.name, class: "mr-2" %>
+          <%= f.radio_button :type, Goals::DaysOfWeek.name, class: "mr-2", data: { action: "click->goal-schedule#changeGoalSchedule"} %>
           <div class="text-xl"><%= t('goal.schedule.days_of_week_label') %></div>
         </div>
       </div>
