Turbo refresh for day_of_week message

--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -35,56 +35,58 @@
       </div>
 
       <turbo-frame id="<%= f.field_id(:type, :turbo_frame) %>">
-      <% if @goal.is_daily? %>
-        <div class="text-gray-400 mt-6">
-          <%= t('goal.schedule.daily_summary') %>
-        </div>
-      <% end %>
-
-      <% if @goal.is_times_per_week? %>
-        <%= f.select :times_per_week, options_for_select(1..6, selected: @goal.times_per_week), {}, class: "mt-6 p-2 px-4 w-full rounded-md border-gray-200", data: { action: "change->goal-schedule#changeGoalSchedule" } %>
-        <div class="text-gray-400 mt-6">
-          <%= times_per_week_schedule_message(@goal.times_per_week) %>
-        </div>
-      <% end %>
-
-      <% if @goal.is_days_of_week? %>
-        <div class="flex flex-col mt-6">
-          <div class="flex space-x-2">
-            <div class="flex flex-col items-center">
-              <%= f.check_box :monday, { checked: @goal.days_of_week.include?(0), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.monday') %></div>
-            </div>
-            <div class="flex flex-col items-center">
-              <%= f.check_box :tuesday, { checked: @goal.days_of_week.include?(1), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.tuesday') %></div>
-            </div>
-            <div class="flex flex-col items-center">
-              <%= f.check_box :wednesday, { checked: @goal.days_of_week.include?(2), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.wednesday') %></div>
-            </div>
-            <div class="flex flex-col items-center">
-              <%= f.check_box :thursday, { checked: @goal.days_of_week.include?(3), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.thursday') %></div>
-            </div>
-            <div class="flex flex-col items-center">
-              <%= f.check_box :friday, { checked: @goal.days_of_week.include?(4), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.friday') %></div>
-            </div>
-            <div class="flex flex-col items-center">
-              <%= f.check_box :saturday, { checked: @goal.days_of_week.include?(5), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.saturday') %></div>
-            </div>
-            <div class="flex flex-col items-center">
-              <%= f.check_box :sunday, { checked: @goal.days_of_week.include?(6), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
-              <div class="text-md"><%= t('days_of_week.sunday') %></div>
-            </div>
+        <% if @goal.is_daily? %>
+          <div class="text-gray-400 mt-6">
+            <%= t('goal.schedule.daily_summary') %>
           </div>
+        <% end %>
+
+        <% if @goal.is_times_per_week? %>
+          <%= f.select :times_per_week, options_for_select(1..6, selected: @goal.times_per_week), {}, class: "mt-6 p-2 px-4 w-full rounded-md border-gray-200", data: { action: "change->goal-schedule#changeGoalSchedule" } %>
+          <div class="text-gray-400 mt-6">
+            <%= times_per_week_schedule_message(@goal.times_per_week) %>
+          </div>
+        <% end %>
+
+        <% if @goal.is_days_of_week? %>
+          <%= f.fields_for :days_of_week do |dow_form| %>
+            <div class="flex flex-col mt-6">
+              <div class="flex space-x-2">
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 0, { checked: @goal.days_of_week.include?(0), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.monday') %></div>
+                </div>
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 1, { checked: @goal.days_of_week.include?(1), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.tuesday') %></div>
+                </div>
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 2, { checked: @goal.days_of_week.include?(2), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.wednesday') %></div>
+                </div>
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 3, { checked: @goal.days_of_week.include?(3), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.thursday') %></div>
+                </div>
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 4, { checked: @goal.days_of_week.include?(4), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.friday') %></div>
+                </div>
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 5, { checked: @goal.days_of_week.include?(5), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.saturday') %></div>
+                </div>
+                <div class="flex flex-col items-center">
+                  <%= dow_form.check_box 6, { checked: @goal.days_of_week.include?(6), class: "mr-2", data: { action: "change->goal-schedule#changeGoalSchedule" } } %>
+                  <div class="text-md"><%= t('days_of_week.sunday') %></div>
+                </div>
+              </div>
+          <% end %>
           <div class="text-gray-400 mt-6">
             <%= days_of_week_schedule_message(@goal.days_of_week) %>
           </div>
-        </div>
-      <% end %>
+          </div>
+        <% end %>
 
       </turbo-frame>
     </div>
