--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,4 +1,7 @@
-<%= render 'layouts/page_header', header: t('goals.header') %>
+<div class="flex justify-between">
+  <%= render 'layouts/page_header', header: t('goals.header') %>
+  <%= link_to t('goals.new_button'), new_goal_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded cursor-pointer h-fit"  %>
+</div>
 
 <div class="space-y-4">
   <% @goals.each do |goal| %>
