--- a/app/components/alerts/base_component.html.erb
+++ b/app/components/alerts/base_component.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="alert" data-alert-target="alert" class="<%="my-4 max-w-lg m-auto bg-#{color}-100 border-t-4 border-#{color}-500 rounded-b text-#{color}-900 px-4 py-3 shadow-sm" %>" role="alert">
+<div data-controller="alert" data-alert-target="alert" class="<%="my-4 m-auto w-100 bg-#{color}-100 border-t-4 border-#{color}-500 rounded-b text-#{color}-900 px-4 py-3 shadow-sm" %>" role="alert">
   <div class="flex">
     <div>
       <p class="font-bold"><%= @message %></p>
