--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,2 +1,2 @@
-<%= render 'layouts/page_header', header: t('goal.header') %>
-<%= render 'goal_form', model: @goal, url: new_goal_path %>
+<%= render 'layouts/page_header', header: t('goal.create.header') %>
+<%= render 'goal_form', model: @goal, current_page_path: new_goal_path %>
