--- a/app/views/goals/_goal_form.html.erb
+++ b/app/views/goals/_goal_form.html.erb
@@ -4,6 +4,8 @@
 
 <%= form_with model: model, url: action_path, scope: :goal do |f| %>
 
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
     <%= f.text_field :name, class: "text-2xl p-4 rounded-md border-gray-200" %>
