--- a/app/views/layouts/_page_header.html.erb
+++ b/app/views/layouts/_page_header.html.erb
@@ -1,1 +1,4 @@
-<p class="text-3xl font-semibold pb-4 select-none"><%= header %></p>
+<div class="flex items-center pb-4 justify-between">
+  <p class="text-3xl font-semibold select-none"><%= header %></p>
+  <%= yield %>
+</div>
