--- a/app/views/today/index.html.erb
+++ b/app/views/today/index.html.erb
@@ -1,1 +1,5 @@
-today
+<div class="flex flex-col space-y-4">
+  <% @task_list.tasks.each do |task| %>
+     <%= render 'today/task', task: task %>
+  <% end %>
+</div>
