Renamed 'today' to 'tasks'

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
 <nav class="flex items-center w-full space-x-4 pb-2 select-none">
-  <%= render Navigation::NavigationItemComponent.new(path: today_index_path, title: t("today")) %>
+  <%= render Navigation::NavigationItemComponent.new(path: tasks_path, title: t("tasks.navigation")) %>
   <%= render Navigation::NavigationItemComponent.new(path: goals_path, title: t("goals.navigation")) %>
 </nav>
