--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <div class="flex flex-col space-y-4">
   <% @task_list.tasks.each do |task| %>
-     <%= render 'today/task', task: task %>
+     <%= render 'tasks/task', task: task %>
   <% end %>
 </div>
