--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,14 +1,17 @@
 <div class="flex flex-col space-y-4">
   <%= form_with path: tasks_path, scope: :task_list do |f| %>
-    <%= f.date_select :date, { default: @date } %>
-    <button
-      formmethod="get"
-      formaction="<%= tasks_path %>"
-      data-goal-schedule-target="changeGoalSchedule"
-      data-turbo-frame="<%= f.field_id(:type, :turbo_frame) %>"
-    >
-      Select
-    </button>
+    <%= f.label :date, t('tasks.date.label'), class: "block mb-4 text-md font-medium text-gray-900 dark:text-white"  %>
+    <div class="flex space-x-4 mt-2">
+      <%= f.date_select :date, { default: @date}, { class: "border border-gray-300 text-gray-900 text-md rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
+      <button
+        id="date_select_button"
+        class="<%= neutral_button %>"
+        formmethod="get"
+        formaction="<%= tasks_path %>"
+      >
+        <%= t('tasks.date.button') %>
+      </button>
+    </div>
 <% end %>
   <% @task_list.tasks.each do |task| %>
      <%= render 'tasks/task', task: task %>
