--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
 <div class="flex items-center border rounded border-gray-300 p-4 cursor-pointer select-none">
   <p class="text-3xl">
-    <%= task.goal.name %>
+    <%= task.name %>
   </p>
 </div>
