Creating an ad-hoc task works for days that aren't today

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,7 @@
         class="text-3xl font-semibold cursor-pointer select-none">
         <%= human_date_string(datetime: @date) %>
       </button>
-      <%= link_to new_adhoc_task_path, class: 'ml-auto' do %>
+      <%= link_to new_adhoc_task_path(task_list_id: @task_list.id), class: 'ml-auto' do %>
         <button class="<%= primary_button %>"><%= t('tasks.adhoc.new') %></button>
       <% end %>
     </div>
