--- a/app/views/adhoc_tasks/new.html.erb
+++ b/app/views/adhoc_tasks/new.html.erb
@@ -1,7 +1,8 @@
 <%= render 'layouts/page_header', header: t('tasks.create.header') %>
 
 <%= form_with model: @adhoc_task, url: adhoc_tasks_path, scope: :adhoc_task  do |f| %>
-  <%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
+  <%= f.hidden_field :task_list_id, value: params[:task_list_id] %>
 
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
