--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -28,7 +28,9 @@
         </div>
       <% end %>
       </div>
-  <% @task_list.tasks.each do |task| %>
-    <%= render 'tasks/task', task: task %>
+  <%= turbo_frame_tag "task-type-turbo-frame", class: "space-y-4" do %>
+    <% @task_list.tasks.each do |task| %>
+      <%= render 'tasks/task', task: task %>
+    <% end %>
   <% end %>
 </div>
