--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -2,10 +2,11 @@
   data-controller="task"
   data-action="click->task#toggleGoalCompletion"
   data-task-target="listItem"
+  id="task-item-<%= task.id %>"
   class="flex items-center border rounded border-gray-300 p-4 cursor-pointer select-none <%= task.completed ? "opacity-50" : nil %>">
   <div class="max-w-sm mr-2 mr-4">
     <%= form_with model: task, url: task_path(task), method: "patch" do |f| %>
-      <%= f.check_box :completed, { checked: task.completed, data: { task_target: "checkbox" } } %>
+      <%= f.check_box :completed, { checked: task.completed, data: { task_target: "checkbox", task_id: task.id } } %>
       <%= f.submit nil, { hidden: true, data: { task_target: "submit"} } %>
     <% end %>
   </div>
