Added acts_as_list to task and adhoc task; js setup and controller setup

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -28,9 +28,5 @@
         </div>
       <% end %>
       </div>
-  <%= turbo_frame_tag "task-type-turbo-frame", class: "space-y-4" do %>
-    <% @task_list.tasks.each do |task| %>
-      <%= render 'tasks/task', task: task %>
-    <% end %>
-  <% end %>
+  <%= render 'tasks/task_list' %>
 </div>
