--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,3 +1,8 @@
-<% if notice %> <%= render Alerts::NoticeComponent.new(message: notice) %> <%
-end %> <% if alert %> <%= render Alerts::DangerComponent.new(message: alert) %>
-<% end %>
+<div id="flash">
+  <% if notice %>
+    <%= render Alerts::NoticeComponent.new(message: notice) %>
+  <% end %>
+  <% if alert %>
+    <%= render Alerts::DangerComponent.new(message: alert) %>
+  <% end %>
+</div>
