Task position test

--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -2,6 +2,7 @@
   <div class="space-y-4" data-controller="task-list">
     <% @task_list.tasks.each do |task| %>
       <div
+        id="task-list-item-<%= task.id %>"
         data-task-id="<%= task.id %>"
       >
         <div class="hidden" >
