--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -27,13 +27,22 @@
               <% end %>
             </div>
             <div class="w-full">
-              <div class="flex flex-col flex-1">
-                <p class="text-3xl mb-1">
-                  <%= vm.task.name %>
-                </p>
-                <div class="flex text-gray-400">
-                  <%= t('tasks.streak') %>: <%= vm.streak %>
+              <div class="flex">
+                <div class="flex flex-col flex-1">
+                  <p class="text-3xl mb-1">
+                    <%= vm.task.name %>
+                  </p>
+                  <div class="flex text-gray-400">
+                    <%= t('tasks.streak') %>: <%= vm.streak %>
+                  </div>
                 </div>
+                <% if vm.show_context? %>
+                  <div class="flex justify-center items-center text-gray-400">
+                    <div class="flex text-gray-400">
+                      <%= vm.context[:completions_this_week] %> / <%= vm.context[:completions_expected] %>
+                    </div>
+                  </div>
+                <% end %>
               </div>
             </div>
           </div>
