--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Ownyourday</title>
+  <title>ownyourday</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="ownyourday: todo list and task scheduler"/>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+
+  <%= favicon_link_tag 'favicon.ico', rel: 'apple-touch-icon', type: 'image/png' %>
+  <link rel="manifest" href="<%= asset_path 'pwa.json' %>" />
+
   <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
