--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>ownyourday</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="ownyourday: todo list and task scheduler"/>
+  <meta name="theme-color" content="#fff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
