--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col space-y-4">
+<div class="flex flex-col space-y-4" id='task-list'>
   <div data-controller="date-select-picker" data-date-select-picker-hidden-class="hidden">
     <div class="flex items-center pb-2">
       <button
