--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <%= javascript_import_module_tag "addReloadToTasksOnActive" %>
+<% end %>
+
 <div class="flex flex-col space-y-4" id='task-list'>
   <div data-controller="date-select-picker" data-date-select-picker-hidden-class="hidden">
     <div class="flex items-center pb-2">
