--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,7 +18,7 @@
     <div id="date_select_picker" data-date-select-picker-target="dateSelectPicker" class="hidden">
       <%= form_with path: tasks_path, scope: :task_list do |f| %>
         <%= f.label :date, t('tasks.date.label'), class: "block mb-4 text-md font-medium text-gray-900 dark:text-white" %>
-        <div class="flex space-x-4 mt-2">
+        <div class="flex flex-col md:flex-row space-y-4 md:space-x-4 mt-2">
           <%= f.date_select :date, { default: @date, order: [:month, :day, :year] }, { class: "border border-gray-300 text-gray-900 text-md rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" } %>
           <button
             id="date_select_button"
