--- a/app/views/goals/_goal_form.html.erb
+++ b/app/views/goals/_goal_form.html.erb
@@ -9,7 +9,7 @@
 
   <div class="flex flex-col pb-4">
     <%= f.label :name, t('goal.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
-    <%= f.text_field :name, class: "text-2xl p-4 rounded-md border-gray-200" %>
+    <%= f.text_field :name, class: "text-2xl p-4 rounded-md border-gray-200", autofocus: true %>
     <%= render 'layouts/forms/input_error', model: @goal, field: :name %>
   </div>
 
