--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -3,4 +3,5 @@
     <%= heroicon "trash",  variant: "solid", options: { class: "w-5 h-5" }  %>
   <% end %>
 <% end %>
-<%= render 'goal_form', model: @goal, view_path: edit_goal_path(@goal.id), action_path: goal_path(@goal.id) %>
+
+<%= render 'goal_form', model: @goal, view_path: edit_goal_path(@goal.id), action_path: goal_path(@goal.id), show_milestones: true %>
